minor changes to fix display on AWS

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             </a></h1>
             <div class="colL">
                 <div class="img">
-                    <img src="media/WvRtest.gif" width=92%>
+                    <img src="media/WvRtestMove.gif" width=92%>
                 </div>
                 <div class="img">
-                    <img src="media/WvRtest.png" width=92%>
+                    <img src="media/WvRtestStill.png" width=92%>
                 </div>
             </div>
             <div class="colR">
@@ -118,7 +118,7 @@
                     I started this Unity project at the start of 2021, and my goal is to have the final project finished and hopefully published by the end of the year.
                     This is my first full-fledged Unity game, and I've been having a lot of fun working on it.<br><br>
                     As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
-                    This has definitely slowed my progress, but it's been exciting to learn about all of these important aspects that go into a finished product.<br><br>
+                    This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
                     There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.
                 </p>
                 </div>
@@ -130,7 +130,7 @@
             </a></h1>
                 <div>
                     <img src="media/logoEMAIL.png" width=60px style="float: left;">
-                    <h3 style="float: left; padding-left:10px;">EMAIL@DOMAIN.EXT</h3>
+                    <h3 style="float: left; padding-left:10px;">kywillpickle@outlook.com</h3>
                     <h3 style="float: right; padding-left:10px;">kywillpickle</h3>
                     <img src="media/logoGH.png" width=60px style="float: right; padding-left:50px;">
                 </div>
