added grid elements to help center parts of the website

--- a/index.html
+++ b/index.html
@@ -128,11 +128,13 @@
             <h1><a id="Contact">
                 Contact<hr>
             </a></h1>
-                <div>
-                    <img src="media/logoEMAIL.png" width=60px style="float: left;">
-                    <h3 style="float: left; padding-left:10px;">kywillpickle@outlook.com</h3>
-                    <h3 style="float: right; padding-left:10px;">kywillpickle</h3>
-                    <img src="media/logoGH.png" width=60px style="float: right; padding-left:50px;">
+                <div class="colL">
+                    <h3 style="float: right; padding-left:10px; padding-right: 25px;">kywillpickle@outlook.com</h3>
+                    <img src="media/logoEMAIL.png" width=60px style="float: right;">
+                </div>
+                <div class="colR">
+                    <img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;">
+                    <h3 style="float: left;">kywillpickle</h3>
                 </div>
         </section>
     </body>
