pretty sure I was formatting image meta tags wrong :))

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Top Notch Games"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://www.topnotchgames.net"/>
-        <meta property="og:image" content="media/tbmlogoShdNoBkg.png"/>
+        <meta property="og:image" content="https://www.topnotchgames.net/media/tbmlogoShdNoBkg.png"/>
         <meta property="og:description" content="The official website of Top Notch Games, a portfolio of my work as a Computer Science and Engineering major."/>
         <meta name="author" content="Kyle Pickle"/>
         <meta name="keywords" content="Kyle Pickle, Top Notch Games, TopNotch Games"/>
@@ -15,7 +15,7 @@
         <meta name="twitter:title" content="Top Notch Games">
         <meta name="twitter:description" content="The official website of Top Notch Games, a portfolio of my work as a Computer Science and Engineering major.">
         <meta name="twitter:card" content="summary_large_image"/>
-        <meta name="twitter:image" content="media/socialPreviewGH.png"/>
+        <meta name="twitter:image" content="https://www.topnotchgames.net/media/socialPreviewGH.png"/>
     </head>
     <body>
         <header>
