Added the first (v0.1) playtest of Wizards vs Robots
Also added css, and reorganized buttons to work globally from the new page.

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
             <h2>
                 a college portfolio by Kyle Pickle
             </h2>
-            <img class="logoimg" src="media/tbmlogoShdNoBkg.png" width=160>
+            <a href="/"><img class="logoimg" src="/media/tbmlogoShdNoBkg.png" width=160></a>
         </header>
         <nav>
             <div class="row">
                 <div class="colL">
-                    <h1><a href=#Experience>
+                    <h1><a href=/#Experience>
                     Experience
                     </a></h1>
                 </div>
                 <div class="colL">
-                    <h1><a href=#Portfolio>
+                    <h1><a href=/#Portfolio>
                     Portfolio
                     </a></h1>
                 </div>
                 <div class="colC"></div>
                 <div class="colR">
-                    <h1><a href=#Contact>
+                    <h1><a href=/#Contact>
                     Contact
                     </a></h1>
                 </div>
                 <div class="colR">
-                    <h1><a href=#Active_Projects>
+                    <h1><a href=/#Active_Projects>
                     Active Projects
                     </a></h1>
                 </div>
@@ -133,7 +133,8 @@
                     This is my first full-fledged Unity game, and I've been having a lot of fun working on it.<br><br>
                     As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
                     This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
-                    There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.
+                    There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.<br><br><br>
+                    If you're viewing on your computer, click <a id="fw" href=/wizardsvrobots/><b>here</b></a> to check the demo!
                 </p>
                 </div>
             </div>
