--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -22,7 +22,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Wizards v Robots.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/WvRHTML.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -83,6 +83,14 @@
           ...that's it lol
       </p>
       <h2><a>
+        <br>Known Bugs
+    </a></h2>
+    <p>
+        - Immortality<br>
+        - Stair glitch still happens sometimes<br>
+        - You can still break out (but not on accident)
+    </p>
+      <h2><a>
           <br>More Info
       </a></h2>
       <p>
@@ -96,7 +104,8 @@
           <br>Updates
       </a></h2>
       <p>
-          <b>v0.1</b> (current): The first playable version. Player is able to move and cast (harmless) spells on a simple map that shows off the textures made for the game.
+          <b>v0.2</b> (current): Improvements to collisions, added enemies/textures/particles, and basic GUI and particle usage.<br><br>
+          <b>v0.1</b> The first playable version. Player is able to move and cast (harmless) spells on a simple map that shows off the textures made for the game.
       </p>
     </div>
   </body>
