--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -79,16 +79,15 @@
       </a></h2>
       <p>
           Move with WASD<br>
-          Point the wand with your mouse, and click to shoot a spell<br><br><br>
+          Point the wand with your mouse, and click to shoot a spell.
+          Click the reset button to go back to the title screen.<br><br>
           ...that's it lol
       </p>
       <h2><a>
         <br>Known Bugs
     </a></h2>
     <p>
-        - Immortality<br>
-        - Stair glitch still happens sometimes<br>
-        - You can still break out (but not on accident)
+        -with the proper lag you can phase through anything
     </p>
       <h2><a>
           <br>More Info
@@ -99,12 +98,15 @@
           As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
           This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
           There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.
+          I'm also really interested in the idea of making customizable spells and abilities to make the game even more unique and enjoyable.
       </p>
       <h2><a>
           <br>Updates
       </a></h2>
       <p>
-          <b>v0.2</b> (current): Improvements to collisions, added enemies/textures/particles, and basic GUI and particle usage.<br><br>
+          <b>v0.3</b> (current): Restructured the entire project to be more object-oriented.
+          Added a title screen, custom sound effects, not so custom music, more particle effects, mortality, and a reset button.<br><br>
+          <b>v0.2</b> Improvements to collisions, added enemies/textures/particles, and basic GUI and particle usage.<br><br>
           <b>v0.1</b> The first playable version. Player is able to move and cast (harmless) spells on a simple map that shows off the textures made for the game.
       </p>
     </div>
