--- a/index.html
+++ b/index.html
@@ -116,11 +116,21 @@
                 Active Projects<hr>
             </a></h1>
             <div class="colL">
-                <div class="img">
-                    <img src="media/WvRtestMove.gif" width=92%>
+                <div>
+                    <div class="img">
+                        <img src="media/WvRsc2.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/WvRsr2.gif" width=92%>
+                    </div>
                 </div>
-                <div class="img">
-                    <img src="media/WvRtestStill.png" width=92%>
+                <div>
+                    <div class="img">
+                        <img src="media/WvRsr1.gif" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/WvRsc1.png" width=92%>
+                    </div>
                 </div>
             </div>
             <div class="colR">
@@ -134,8 +144,13 @@
                     As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
                     This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
                     There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.<br><br><br>
-                    If you're viewing on your computer, click <a id="fw" href=/wizardsvrobots/><b>here</b></a> to check the demo!
+                    If you're viewing on your computer, click the button below to check out the demo!
                 </p>
+                </div>
+                <div>
+                    <a href="/wizardsvrobots/"><button>
+                        <img class="buttonimg" src="media/buttonPD.png" width=240>
+                    </a></button>
                 </div>
             </div>
         </section>
