--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -78,8 +78,9 @@
           Controls
       </a></h2>
       <p>
-          Move with WASD<br>
-          Point the wand with your mouse, and click to shoot a spell.
+          Move with WASD, and zoom in/out with the scroll wheel.<br>
+          Point the wand with your mouse, and click to shoot a spell.<br>
+          Use the number keys 1-5 (or click) to switch between items.<br>
           Click the reset button to go back to the title screen.<br><br>
           ...that's it lol
       </p>
@@ -87,7 +88,7 @@
         <br>Known Bugs
     </a></h2>
     <p>
-        -with the proper lag you can phase through anything
+        -if you lag enough you can phase through anything
     </p>
       <h2><a>
           <br>More Info
@@ -104,10 +105,11 @@
           <br>Updates
       </a></h2>
       <p>
-          <b>v0.3</b> (current): Restructured the entire project to be more object-oriented.
+          <b>v0.4</b> (current): Made a new and more interesting map. Added two new spells, a functional inventory and minimap, and crystals (control points) that make the game winnable.<br><br>
+          <b>v0.3</b> Restructured the entire project to be more object-oriented.
           Added a title screen, custom sound effects, not so custom music, more particle effects, mortality, and a reset button.<br><br>
           <b>v0.2</b> Improvements to collisions, added enemies/textures/particles, and basic GUI and particle usage.<br><br>
-          <b>v0.1</b> The first playable version. Player is able to move and cast (harmless) spells on a simple map that shows off the textures made for the game.
+          <b>v0.1</b> The first playable version. Player is able to move and cast (harmless) spells on a simple map that shows off the textures made for the game.<br><br>
       </p>
     </div>
   </body>
