forgot to change meta image card
whoops

--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="TNG | Wizards vs Robots Demo"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.topnotchgames.net/wizardsvrobots"/>
-    <meta property="og:image" content="https://www.topnotchgames.net/media/WvRtestStill.png"/>
+    <meta property="og:image" content="https://www.topnotchgames.net/media/WvRsc2.png"/>
     <meta property="og:description" content="An HTML version of the Unity game I'm making: Wizards Versus Robots"/>
     <meta name="author" content="Kyle Pickle"/>
     <meta name="keywords" content="Kyle Pickle, Top Notch Games, TopNotch Games, Wizards Versus Robots, Wizards vs Robots, Wizards v Robots"/>
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="TNG | Wizards vs Robots Demo">
     <meta name="twitter:description" content="TAn HTML version of the Unity game I'm making: Wizards Versus Robots">
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:image" content="https://www.topnotchgames.net/media/WvRtestStill.png"/>
+    <meta name="twitter:image" content="https://www.topnotchgames.net/media/WvRsc2.png"/>
     <link rel="shortcut icon" href="/media/tbmlogoShdNoBkg.png">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
