Added header animation
changed the header clouds to infinitely scroll left-to-right on both the main and wizardsvrobots pages.

--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Kyle Pickle, Top Notch Games, TopNotch Games, Wizards Versus Robots, Wizards vs Robots, Wizards v Robots"/>
     <meta name="theme-color" content="#FFFF00"/>
     <meta name="twitter:title" content="TNG | Wizards vs Robots Demo">
-    <meta name="twitter:description" content="TAn HTML version of the Unity game I'm making: Wizards Versus Robots">
+    <meta name="twitter:description" content="An HTML version of the Unity game I'm making: Wizards Versus Robots">
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="https://www.topnotchgames.net/media/WvRsc2.png"/>
     <link rel="shortcut icon" href="/media/tbmlogoShdNoBkg.png">
