changed email and added links to both it and github

--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                 Contact<hr>
             </a></h1>
                 <div class="colL">
-                    <h3 style="float: right; padding-left:10px; padding-right: 25px;">kywillpickle@outlook.com</h3>
-                    <img src="media/logoEMAIL.png" width=60px style="float: right;">
+                    <h3 style="float: right; padding-left:10px; padding-right: 25px;"><a href="mailto: kwpickle@ucdavis.edu">kwpickle@ucdavis.edu</a></h3>
+                    <a href="mailto: kwpickle@ucdavis.edu"><img src="media/logoEMAIL.png" width=60px style="float: right;"></a>
                 </div>
                 <div class="colR">
-                    <img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;">
-                    <h3 style="float: left;">kywillpickle</h3>
+                    <a href="https://github.com/kywillpickle"><img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;"></a>
+                    <h3 style="float: left;"><a href="https://github.com/kywillpickle">kywillpickle</a></h3>
                 </div>
         </section>
     </body>
