--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -81,6 +81,8 @@
           Move with WASD, and zoom in/out with the scroll wheel.<br>
           Point the wand with your mouse, and click to shoot a spell.<br>
           Use the number keys 1-5 (or click) to switch between items.<br>
+          Click on the the gear button to open the settings menu.<br>
+          In the shop, click an option to select it and click "Buy" to buy it.<br>
           Click the reset button to go back to the title screen.<br><br>
           ...that's it lol
       </p>
@@ -88,7 +90,9 @@
         <br>Known Bugs
     </a></h2>
     <p>
-        -if you lag enough you can phase through anything
+        -if you lag enough you can phase through anything<br>
+        -some spell scrolls (very rarely) dont dissapear when you use them<br>
+        -the game is starting to get noticibly laggy for WebGL :/
     </p>
       <h2><a>
           <br>More Info
@@ -105,7 +109,8 @@
           <br>Updates
       </a></h2>
       <p>
-          <b>v0.4</b> (current): Made a new and more interesting map. Added two new spells, a functional inventory and minimap, and crystals (control points) that make the game winnable.<br><br>
+          <b>v0.5</b> (current): Added teleport scroll, new sounds, nicer main menu, settings menu, capitalism, and a legal tile detection system (patent pending).<br><br>
+          <b>v0.4</b> Made a new and more interesting map. Added two new spells (heal and fireball), a functional inventory and minimap, and crystals (control points) that make the game winnable.<br><br>
           <b>v0.3</b> Restructured the entire project to be more object-oriented.
           Added a title screen, custom sound effects, not so custom music, more particle effects, mortality, and a reset button.<br><br>
           <b>v0.2</b> Improvements to collisions, added enemies/textures/particles, and basic GUI and particle usage.<br><br>
