Updated WvR v0.5 buglist
Wrote "brief" as "breif" in the shop. I can't spell, but at least I'm honest ;-;

--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -92,6 +92,7 @@
     <p>
         -if you lag enough you can phase through anything<br>
         -some spell scrolls (very rarely) dont dissapear when you use them<br>
+        -I spelled "brief" wrong .-.<br>
         -the game is starting to get noticibly laggy for WebGL :/
     </p>
       <h2><a>
