--- a/index.html
+++ b/index.html
@@ -77,37 +77,39 @@
             <h1><a id="Portfolio">
                 Portfolio<hr>
             </a></h1>
-            <div class="colL">
-                <div>
-                    <h2>
-                        Arboretum Gallerium
-                    </h2>
-                    <p>
-                        An interactive map for learning from and navigating in the UC Davis Arboretum, with useful information about COVID-19, local wildlife, biodiversity, and more.<br><br>
-                        This project was made over the course of 36 hours for the UC Davis HackDavis2021 hackathon. It won the "Best Health Hack" award for helping connect people with the outside world while coping with social distancing.
-                    </p>
+            <div class="item">
+                <div class="colL">
+                    <div>
+                        <h2>
+                            Arboretum Gallerium
+                        </h2>
+                        <p>
+                            An interactive map for learning from and navigating in the UC Davis Arboretum, with useful information about COVID-19, local wildlife, biodiversity, and more.<br><br>
+                            This project was made over the course of 36 hours for the UC Davis HackDavis2021 hackathon. It won the "Best Health Hack" award for helping connect people with the outside world while coping with social distancing.
+                        </p>
+                    </div>
+                    <div>
+                        <a href="https://github.com/kywillpickle/Arboretum-Gallerium" target="_blank"><button>
+                            <img class="buttonimg" src="media/buttonGH.png" width=100>
+                        </a></button>
+                        <a href="https://devpost.com/software/arboretum-gallerium" target="_blank"><button>
+                            <img class="buttonimg" src="media/buttonDP.png" width=100>
+                        </a></button>
+                    </div>
                 </div>
-                <div>
-                    <a href="https://github.com/kywillpickle/Arboretum-Gallerium" target="_blank"><button>
-                        <img class="buttonimg" src="media/buttonGH.png" width=100>
-                    </a></button>
-                    <a href="https://devpost.com/software/arboretum-gallerium" target="_blank"><button>
-                        <img class="buttonimg" src="media/buttonDP.png" width=100>
-                    </a></button>
-                </div>
-            </div>
-            <div class="colR">
-                <div class="img">
-                    <img src="media/AGScrSho1.png" width=92%>
-                </div>
-                <div class="img">
-                    <img src="media/AGScrSho2.png" width=92%>
-                </div>
-                <div class="img">
-                    <img src="media/AGScrSho3.png" width=92%>
-                </div>
-                <div class="img">
-                    <img src="media/AGScrSho4.png" width=92%>
+                <div class="colR">
+                    <div class="img">
+                        <img src="media/AGScrSho1.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/AGScrSho2.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/AGScrSho3.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/AGScrSho4.png" width=92%>
+                    </div>
                 </div>
             </div>
         </section>
@@ -115,44 +117,80 @@
             <h1><a id="Active_Projects">
                 Active Projects<hr>
             </a></h1>
-            <div class="colL">
-                <div>
-                    <div class="img">
-                        <img src="media/WvRsc2.png" width=92%>
+            <div class="item">
+                <div class="colL">
+                    <div>
+                        <div class="img">
+                            <img src="media/WvRsc2.png" width=92%>
+                        </div>
+                        <div class="img">
+                            <img src="media/WvRsr2.gif" width=92%>
+                        </div>
                     </div>
-                    <div class="img">
-                        <img src="media/WvRsr2.gif" width=92%>
+                    <div>
+                        <div class="img">
+                            <img src="media/WvRsr1.gif" width=92%>
+                        </div>
+                        <div class="img">
+                            <img src="media/WvRsc1.png" width=92%>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div class="img">
-                        <img src="media/WvRsr1.gif" width=92%>
+                <div class="colR">
+                    <div>
+                    <h2>
+                        Wizards vs Robots
+                    </h2>
+                    <p>
+                        I started this Unity project at the start of 2021, and my goal is to have the final project finished and hopefully published by the end of the year.
+                        This is my first full-fledged Unity game, and I've been having a lot of fun working on it.<br><br>
+                        As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
+                        This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
+                        There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.<br><br><br>
+                        If you're viewing on your computer, click the button below to check out the demo!
+                    </p>
                     </div>
-                    <div class="img">
-                        <img src="media/WvRsc1.png" width=92%>
+                    <div class="buttondiv">
+                        <a href="/wizardsvrobots/"><button>
+                            <img class="buttonimg" src="media/buttonPD.png" width=200>
+                        </a></button>
                     </div>
                 </div>
             </div>
-            <div class="colR">
-                <div>
-                <h2>
-                    Wizards vs Robots
-                </h2>
-                <p>
-                    I started this Unity project at the start of 2021, and my goal is to have the final project finished and hopefully published by the end of the year.
-                    This is my first full-fledged Unity game, and I've been having a lot of fun working on it.<br><br>
-                    As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
-                    This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
-                    There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.<br><br><br>
-                    If you're viewing on your computer, click the button below to check out the demo!
-                </p>
+            <h2><hr class="seperator"></h2>
+            <div class="item">
+                <div class="colR2">
+                    <div>
+                        <div class="img">
+                            <img src="media/FCsr1.gif" width=92%>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="img">
+                            <img src="media/FCsc1.png" width=92%>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <a href="/wizardsvrobots/"><button>
-                        <img class="buttonimg" src="media/buttonPD.png" width=200>
-                    </a></button>
+                <div class="colL2">
+                    <div>
+                    <h2>
+                        FrogCraft
+                    </h2>
+                    <p>
+                        FrogCraft is a Minecraft Forge mod for 1.16 that I started working on just before Summer 2021.
+                        Like Wizards vs Robots, I've been doing all of the coding, modeling, texturing, etc. by myself to get a better idea as to how to make minecraft mods.<br><br>
+                        The end-goal for this project is a mod centered around many different types of frogs, and the increasingly supernatural world they live in.
+                        Cute on the surface, weirder and creepier as one delves deeper into the mod.<br>(basically just cute for now)
+                    </p>
+                    </div>
+                    <div class="buttondiv">
+                        <a href="https://github.com/kywillpickle/FrogCraft"><button>
+                            <img class="buttonimg" src="media/buttonGH.png" width=110>
+                        </a></button>
+                    </div>
                 </div>
             </div>
+            <br><br>
         </section>
         <section class="dark" id="Contact" style="overflow: hidden;">
             <h1><a id="Contact">
