--- a/wizardsvrobots/index.html
+++ b/wizardsvrobots/index.html
@@ -73,28 +73,33 @@
         <div class="title">Wizards v Robots</div>
       </div>
     </div>
-    <div id="info">
-      <h2><a>
-          Controls
-      </a></h2>
-      <p>
-          Move with WASD, and zoom in/out with the scroll wheel.<br>
-          Point the wand with your mouse, and click to shoot a spell.<br>
-          Use the number keys 1-5 (or click) to switch between items.<br>
-          Click on the the gear button to open the settings menu.<br>
-          In the shop, click an option to select it and click "Buy" to buy it.<br>
-          Click the reset button to go back to the title screen.<br><br>
-          ...that's it lol
-      </p>
-      <h2><a>
-        <br>Known Bugs
-    </a></h2>
-    <p>
-        -if you lag enough you can phase through anything<br>
-        -some spell scrolls (very rarely) dont dissapear when you use them<br>
-        -I spelled "brief" wrong .-.<br>
-        -the game is starting to get noticibly laggy for WebGL :/
-    </p>
+    <div id="info" class=light>
+      <div class="item">
+        <div class="colL">
+          <h2><a>
+            <br>Controls
+          </a></h2>
+          <p>
+            -Move with WASD, and zoom in/out with the scroll wheel<br>
+            -Point the wand with your mouse, and click to shoot a spell<br>
+            -Use the number keys 1-5 (or click) to switch between items<br>
+            -Click on the the gear button to open the settings menu<br>
+            -In the shop, click an option to select it and click "Buy" to buy it<br>
+            -Click the reset button to go back to the title screen
+          </p>
+        </div>
+        <div class="colR">
+          <h2><a>
+            <br>Known Bugs
+          </a></h2>
+          <p>
+              -if you lag enough you can phase through anything<br>
+              -some spell scrolls (very rarely) dont dissapear when you use them<br>
+              -I spelled "brief" wrong...<br>
+              -the game is starting to get noticibly laggy for WebGL :/
+          </p>
+      </div>
+  </div>
       <h2><a>
           <br>More Info
       </a></h2>
