--- a/index.html
+++ b/index.html
@@ -92,11 +92,17 @@
                     </div>
                     <div>
                         <a href="https://github.com/kywillpickle/Arboretum-Gallerium" target="_blank"><button>
-                            <img class="buttonimg" src="media/buttonGH.png" width=100>
-                        </a></button>
+                            <div class="githubButton" style="display:grid; height: 65px; width: 195px; align-items: center; justify-items: center; overflow: hidden;">
+                                <img style="grid-column: 1;" src="media/logoGH.png" width=60px>
+                                <span style="align-content: left; grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Github</span>
+                            </div>
+                        </button></a>
                         <a href="https://devpost.com/software/arboretum-gallerium" target="_blank"><button>
-                            <img class="buttonimg" src="media/buttonDP.png" width=100>
-                        </a></button>
+                            <div class="devpostButton" style="display:grid; height: 65px; width: 215px; align-items: center; justify-items: center; overflow: hidden;">
+                                <img style="grid-column: 1;" src="media/logoDEV.png" width=60px>
+                                <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Devpost</span>
+                            </div>
+                        </button></a>
                     </div>
                 </div>
                 <div class="colR">
@@ -152,11 +158,12 @@
                         If you're viewing on your computer, click the button below to check out the demo!
                     </p>
                     </div>
-                    <div class="buttondiv">
-                        <a href="/wizardsvrobots/"><button>
-                            <img class="buttonimg" src="media/buttonPD.png" width=200>
-                        </a></button>
-                    </div>
+                    <a href="/wizardsvrobots/"><button>
+                        <div class="playButton" style="display:grid; height: 65px; width: 195px; align-items: center; justify-items: center;">
+                            <img style="grid-column: 1;" src="media/logoPLAY.png" width=60px>
+                            <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: xx-large; color: white;">Play</span>
+                        </div>
+                    </button></a>
                 </div>
             </div>
             <h2><hr class="seperator"></h2>
@@ -185,11 +192,12 @@
                         Cute on the surface, weirder and creepier as one delves deeper into the mod.<br>(basically just cute for now)
                     </p>
                     </div>
-                    <div class="buttondiv">
-                        <a href="https://github.com/kywillpickle/FrogCraft"><button>
-                            <img class="buttonimg" src="media/buttonGH.png" width=110>
-                        </a></button>
-                    </div>
+                    <a href="https://github.com/kywillpickle/FrogCraft" target="_blank"><button>
+                        <div class="githubButton" style="display:grid; height: 65px; width: 195px; align-items: center; justify-items: center; overflow: hidden;">
+                            <img style="grid-column: 1;" src="media/logoGH.png" width=60px>
+                            <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Github</span>
+                        </div>
+                    </button></a>
                 </div>
             </div>
             <br><br>
@@ -198,14 +206,14 @@
             <h1><a id="Contact">
                 Contact<hr>
             </a></h1>
-                <div class="colL">
-                    <h3 style="float: right; padding-left:10px; padding-right: 25px;"><a href="mailto: kwpickle@ucdavis.edu">kwpickle@ucdavis.edu</a></h3>
-                    <a href="mailto: kwpickle@ucdavis.edu"><img src="media/logoEMAIL.png" width=60px style="float: right;"></a>
-                </div>
-                <div class="colR">
-                    <a href="https://github.com/kywillpickle"><img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;"></a>
-                    <h3 style="float: left;"><a href="https://github.com/kywillpickle">kywillpickle</a></h3>
-                </div>
+            <div class="colL">
+                <h3 style="float: right; padding-left:10px; padding-right: 25px;"><a href="mailto: kwpickle@ucdavis.edu">kwpickle@ucdavis.edu</a></h3>
+                <a href="mailto: kwpickle@ucdavis.edu"><img src="media/logoEMAIL.png" width=60px style="float: right;"></a>
+            </div>
+            <div class="colR">
+                <a href="https://github.com/kywillpickle"><img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;"></a>
+                <h3 style="float: left;"><a href="https://github.com/kywillpickle">kywillpickle</a></h3>
+            </div>
         </section>
         <br><br>
         <script src="./zenscroll.js"></script>
@@ -221,5 +229,16 @@
         var intro = document.querySelector('#Introduction'); ScrollReveal().reveal(intro, {delay:100});
         var experheadr = document.querySelector('section#Experience h1'); ScrollReveal().reveal(experheadr, {delay:0});
         var exper = document.querySelector('#Experience'); ScrollReveal().reveal(exper, {delay:200});
+        // Button Hover Animation
+        const butts = document.querySelectorAll('.githubButton, .devpostButton, .playButton');
+        console.log(butts);
+        for(let i = 0; i < butts.length; i++) {
+            butts[i].addEventListener("mouseover", function animateBkg() {
+                this.style = "display:grid; height: "+this.style.height+"; width: "+this.style.width+"; align-items: center; justify-items: center; -webkit-animation: colorCycle 3s linear infinite; -moz-animation: colorCycle 3s linear infinite; animation: colorCycle 3s linear infinite;";
+            })
+            butts[i].addEventListener("mouseout", function rmAnimation() {
+                this.style = "display:grid; height: "+this.style.height+"; width: "+this.style.width+"; align-items: center; justify-items: center;";
+            })
+        }
     </script>
 </html>
