Updated website content for 2022

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             </a></h1>
             <p>
                 I started college in September of 2020 as a Computer Science & Engineering major at University of California, Davis, and plan on graduating in or before June of 2024.
-                I am familiar with Java, Python, C#, C++, basic HTML5/CSS, and the Linux command line, as well as tools like Microsoft Office, Autodesk, Adobe, and Unity.
-                If you are recruiting and wish to know more about my transcript, extracirriculars, and/or previous work experience, just reach out to me and I would be happy to share my resume.
+                I am familiar with Java, Python, C#, C++, HTML5/CSS, basic JavaScript, and the Linux command line, as well as tools like Microsoft Office, Autodesk, Adobe, and Unity.
+                If you are recruiting and wish to know more about my transcript, extracirriculars, and/or previous work experience, please reach out to me and I would be happy to share my resume.
             </p>
         </section>
         <section class="dark" id="Portfolio" style="overflow: hidden;">
@@ -158,12 +158,12 @@
                         Wizards vs Robots
                     </h2>
                     <p>
-                        I started this Unity project at the start of 2021, and my goal is to have the final project finished and hopefully published by the end of the year.
-                        This is my first full-fledged Unity game, and I've been having a lot of fun working on it.<br><br>
-                        As this is a solo project, I've been making all of the graphics, code, sounds, rules, etc. by myself.
-                        This has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
-                        There is still much do before the game is finished. My end goal is a fast-paced online multiplayer game for people to make lobbies and play with their friends.<br><br><br>
-                        If you're viewing on your computer, click the button below to check out the demo!
+                        I started this Unity project at the start of 2021, and have successfully developed it into a (mostly) functional Multiplayer videogame.	
+                        This definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
+
+                        While the game is technically finished for now, there is still room for improvement. My plan for 2022 is to move it to mobile devices and create a server-hosted matchmaking system, as well as add more content like AI-controlled robots and new and improved items and bugfixes.<br><br><br>
+
+                        Unfortunately Unity MLAPI currently does not support WebGL but you can find the download page <a style="color: #bf77ff" href="https://bit.ly/3pwjNcQ">here</a> (the password is "boop"). Otherwise, click the button below to check out the old demo!
                     </p>
                     </div>
                     <a href="/wizardsvrobots/"><button>
@@ -195,9 +195,9 @@
                     </h2>
                     <p>
                         FrogCraft is a Minecraft Forge mod for 1.16 that I started working on just before Summer 2021.
-                        Like Wizards vs Robots, I've been doing all of the coding, modeling, texturing, etc. by myself to get a better idea as to how to make minecraft mods.<br><br>
-                        The end-goal for this project is a mod centered around many different types of frogs, and the increasingly supernatural world they live in.
-                        Cute on the surface, weirder and creepier as one delves deeper into the mod.<br>(basically just cute for now)
+                        Like Wizards vs Robots, I've been doing all of the coding, modeling, texturing, etc. by myself to get a better idea as to how to make minecraft mods.<br>
+                        The end-goal for this project is a lovecraftian-inspired mod centered around many different types of frogs, and their increasingly supernatural origin and lore. Cute on the suface, yet creepier as one dives deeper into the mod.<br><br>
+                        Unfortunately, FrogCraft is currently on hold as Mojang announced they will be releasing their own version of frogs in 2022. Once they're added I plan on starting from scratch off of the new model.
                     </p>
                     </div>
                     <a href="https://github.com/kywillpickle/FrogCraft" target="_blank"><button>
