accidentally cut of a sentence

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </h2>
                     <p>
                         I started this Unity project at the start of 2021, and have successfully developed it into a (mostly) functional Multiplayer videogame.	
-                        This definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
+                        Working on this entire project on my own has definitely slowed my progress, but it's been exciting to learn about all of the important aspects that go into a finished product.<br><br>
 
                         While the game is technically finished for now, there is still room for improvement. My plan for 2022 is to move it to mobile devices and create a server-hosted matchmaking system, as well as add more content like AI-controlled robots and new and improved items and bugfixes.<br><br><br>
 
